# OnscripterYuri

./: CMakeLists.txt  README.md  build_data_pak.sh  run_game.sh  run_launcher.sh  run_onsyuri.sh  run_onsyuri_from_launcher.sh  test_launcher.sh  test_onsyuri.sh  摇杆与指针模式问题总结.md  构建LinuxArm64版.txt
.cursor/rules/: project-architecture.mdc
.cursor/rules/input/: handheld-pointer-mode.mdc  player-input.mdc
.cursor/rules/launcher/: overview.mdc
launcher/: CMakeLists.txt  game_list.cpp  game_list.h  launcher_chrome.cpp  launcher_chrome.h  launcher_game_list_view_vertical.cpp  launcher_game_list_view_vertical.h  launcher_grid_view.cpp  launcher_grid_view.h  launcher_menu_input.cpp  launcher_menu_input.h  launcher_switch_game_row_view.cpp  launcher_switch_game_row_view.h  launcher_texture_cache.cpp  launcher_texture_cache.h  launcher_theme.cpp  launcher_theme.h  main.cpp  menu_ui.cpp  menu_ui.h  options.cpp  options.h  pak_builder.cpp  resource_loader.cpp  resource_loader.h  resource_pak.cpp  resource_pak.h
script/: local_linuxa64.sh
src/onsyuri/: ONScripter.cpp  ONScripter.h  ONScripter_animation.cpp  ONScripter_event.cpp  ONScripter_image.cpp
src/onsyuri/renderer/: gles_renderer.cpp
计划/: Linux-ARM64-掌机-摇杆模拟鼠标与模式切换.md
